--- a/public/output.css
+++ b/public/output.css
@@ -18,7 +18,7 @@
     --color-green-800: oklch(44.8% 0.119 151.328);
     --color-green-900: oklch(39.3% 0.095 152.535);
     --color-green-950: oklch(26.6% 0.065 152.934);
-    --color-blue-400: oklch(70.7% 0.165 254.624);
+    --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
@@ -53,8 +53,10 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
-    --text-9xl: 8rem;
-    --text-9xl--line-height: 1;
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
+    --text-8xl: 6rem;
+    --text-8xl--line-height: 1;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --tracking-wide: 0.025em;
@@ -249,27 +251,6 @@
   .top-3 {
     top: calc(var(--spacing) * 3);
   }
-  .top-7 {
-    top: calc(var(--spacing) * 7);
-  }
-  .top-\[-150px\] {
-    top: -150px;
-  }
-  .top-\[-250px\] {
-    top: -250px;
-  }
-  .top-\[-260px\] {
-    top: -260px;
-  }
-  .top-\[-290px\] {
-    top: -290px;
-  }
-  .top-\[-300px\] {
-    top: -300px;
-  }
-  .top-\[-350px\] {
-    top: -350px;
-  }
   .right-2 {
     right: calc(var(--spacing) * 2);
   }
@@ -282,8 +263,8 @@
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
-  .left-1\/2 {
-    left: calc(1/2 * 100%);
+  .left-0 {
+    left: calc(var(--spacing) * 0);
   }
   .left-2 {
     left: calc(var(--spacing) * 2);
@@ -303,23 +284,11 @@
   .z-100 {
     z-index: 100;
   }
-  .container {
-    width: 100%;
-    @media (width >= 40rem) {
-      max-width: 40rem;
-    }
-    @media (width >= 48rem) {
-      max-width: 48rem;
-    }
-    @media (width >= 64rem) {
-      max-width: 64rem;
-    }
-    @media (width >= 80rem) {
-      max-width: 80rem;
-    }
-    @media (width >= 96rem) {
-      max-width: 96rem;
-    }
+  .z-150 {
+    z-index: 150;
+  }
+  .z-200 {
+    z-index: 200;
   }
   .mx-1 {
     margin-inline: calc(var(--spacing) * 1);
@@ -409,6 +378,9 @@
   .h-9 {
     height: calc(var(--spacing) * 9);
   }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
@@ -453,9 +425,6 @@
   }
   .h-screen {
     height: 100vh;
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
   }
   .w-1\/2 {
     width: calc(1/2 * 100%);
@@ -517,15 +486,8 @@
   .shrink-0 {
     flex-shrink: 0;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-x-1\/2 {
-    --tw-translate-x: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
+  .-translate-x-full {
+    --tw-translate-x: -100%;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
@@ -626,8 +588,19 @@
       margin-inline-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
-  .self-center {
-    align-self: center;
+  .divide-y {
+    :where(& > :not(:last-child)) {
+      --tw-divide-y-reverse: 0;
+      border-bottom-style: var(--tw-border-style);
+      border-top-style: var(--tw-border-style);
+      border-top-width: calc(1px * var(--tw-divide-y-reverse));
+      border-bottom-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+    }
+  }
+  .divide-green-300 {
+    :where(& > :not(:last-child)) {
+      border-color: var(--color-green-300);
+    }
   }
   .overflow-hidden {
     overflow: hidden;
@@ -661,6 +634,14 @@
     border-top-style: var(--tw-border-style);
     border-top-width: 1px;
   }
+  .border-t-4 {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 4px;
+  }
+  .border-b-2 {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 2px;
+  }
   .border-gray-100 {
     border-color: var(--color-gray-100);
   }
@@ -690,12 +671,6 @@
   }
   .bg-\[\#021002\] {
     background-color: #021002;
-  }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
-  }
-  .bg-amber-400 {
-    background-color: var(--color-amber-400);
   }
   .bg-black {
     background-color: var(--color-black);
@@ -732,8 +707,8 @@
       }
     }
   }
-  .bg-blue-400 {
-    background-color: var(--color-blue-400);
+  .bg-blue-500 {
+    background-color: var(--color-blue-500);
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
@@ -743,12 +718,6 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
-  }
-  .bg-gray-400 {
-    background-color: var(--color-gray-400);
-  }
-  .bg-gray-600 {
-    background-color: var(--color-gray-600);
   }
   .bg-green-200 {
     background-color: var(--color-green-200);
@@ -825,14 +794,11 @@
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
   }
   .p-30 {
     padding: calc(var(--spacing) * 30);
-  }
-  .px-2 {
-    padding-inline: calc(var(--spacing) * 2);
   }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
@@ -867,26 +833,29 @@
   .py-16 {
     padding-block: calc(var(--spacing) * 16);
   }
+  .pt-3 {
+    padding-top: calc(var(--spacing) * 3);
+  }
+  .pt-6 {
+    padding-top: calc(var(--spacing) * 6);
+  }
+  .pt-8 {
+    padding-top: calc(var(--spacing) * 8);
+  }
   .pb-1 {
     padding-bottom: calc(var(--spacing) * 1);
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
   }
-  .pl-10 {
-    padding-left: calc(var(--spacing) * 10);
+  .pb-10 {
+    padding-bottom: calc(var(--spacing) * 10);
   }
-  .pl-20 {
-    padding-left: calc(var(--spacing) * 20);
+  .pl-4 {
+    padding-left: calc(var(--spacing) * 4);
   }
   .pl-30 {
     padding-left: calc(var(--spacing) * 30);
-  }
-  .pl-34 {
-    padding-left: calc(var(--spacing) * 34);
-  }
-  .pl-35 {
-    padding-left: calc(var(--spacing) * 35);
   }
   .text-center {
     text-align: center;
@@ -912,9 +881,17 @@
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
-  .text-9xl {
-    font-size: var(--text-9xl);
-    line-height: var(--tw-leading, var(--text-9xl--line-height));
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-7xl {
+    font-size: var(--text-7xl);
+    line-height: var(--tw-leading, var(--text-7xl--line-height));
+  }
+  .text-8xl {
+    font-size: var(--text-8xl);
+    line-height: var(--tw-leading, var(--text-8xl--line-height));
   }
   .text-base {
     font-size: var(--text-base);
@@ -935,30 +912,6 @@
   .text-xs {
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
-  }
-  .text-\[2rem\] {
-    font-size: 2rem;
-  }
-  .text-\[10rem\] {
-    font-size: 10rem;
-  }
-  .text-\[20rem\] {
-    font-size: 20rem;
-  }
-  .text-\[30rem\] {
-    font-size: 30rem;
-  }
-  .text-\[40rem\] {
-    font-size: 40rem;
-  }
-  .text-\[300px\] {
-    font-size: 300px;
-  }
-  .text-\[400px\] {
-    font-size: 400px;
-  }
-  .text-\[500px\] {
-    font-size: 500px;
   }
   .leading-15 {
     --tw-leading: calc(var(--spacing) * 15);
@@ -995,20 +948,8 @@
   .whitespace-nowrap {
     white-space: nowrap;
   }
-  .text-\[\#001f00\] {
-    color: #001f00;
-  }
-  .text-\[\#011f01\] {
-    color: #011f01;
-  }
-  .text-\[\#012501\] {
-    color: #012501;
-  }
   .text-\[\#015301\] {
     color: #015301;
-  }
-  .text-\[\#fff\] {
-    color: #fff;
   }
   .text-\[white\] {
     color: white;
@@ -1070,8 +1011,8 @@
   .uppercase {
     text-transform: uppercase;
   }
-  .font-stretch-100\% {
-    font-stretch: 100%;
+  .italic {
+    font-style: italic;
   }
   .underline {
     text-decoration-line: underline;
